[package]
name = "emerge"
version = "0.1.2"
edition = "2021"
authors = ["Jake Peters <jakepeters199@hotmail.com"]
description = "A library for building and rendering force directed graphs"
homepage = "https://github.com/LazyScaper/emerge"
repository = "https://github.com/LazyScaper/emerge"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["force", "directed", "renderer", "graph", "simulation"]
categories = ["simulation", "graphics", "visualization", "game-development"]
exclude = [
    "examples/*"
]

[dependencies]
macroquad = "0.4.14"
hecs = "0.10.5"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
random = { package = "rand", version = "0.9.1" }
csv = "1.3.1"
